# Benchmarking_ML_Phishing_SOC_Automation

./: .env.example  .gitignore  Dockerfile.task_a  Dockerfile.task_b  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
configs/: global.yaml  task_a.yaml  task_b.yaml
docs/: DATASETS.md  PIPELINE.md  RESULTS.md
notebooks/: 00_data_exploration.ipynb  01_explore.ipynb  02_baselines.ipynb  10_feature_baselines.ipynb  20_transformers_eval.ipynb
src/common_utils/: __init__.py  config.py  hashing.py  io.py  logging_conf.py  metrics.py  text_cleaning.py
src/phishing_benchmark/: __init__.py  config.py  logging_conf.py  utils.py
src/phishing_benchmark/cli/: download_data.py  evaluate.py  preprocess.py  run_all.py  train.py
src/phishing_benchmark/data/: __init__.py  cleaning.py  loaders.py  merge.py  splits.py
src/phishing_benchmark/eval/: metrics.py  reporting.py
src/phishing_benchmark/features/: text_normalization.py  vectorizers.py
src/phishing_benchmark/models/: classical.py  deep.py  llm_inference.py  transformers.py
src/phishing_detection_suite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/task_a_benchmark/: README.md  __init__.py  cli.py  evaluate.py  features.py  leaderboard.py  loaders.py  models_classical.py  models_llm.py  models_transformers.py  preprocess.py  schema.py  train.py
src/task_b_soc/: README.md  __init__.py  cli.py  enrich.py  parsers.py  pipeline.py  serving.py
src/task_b_soc/ui/: index.html  main.js
tests/: test_api.py  test_cleaning.py  test_dedup_split.py  test_merge.py  test_metrics.py  test_schema.py  test_vectorizers.py
