[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-benchmark"
version = "0.1.0"
description = "Benchmarking pipeline for phishing detection datasets and models"
readme = "README.md"
authors = [{ name = "phishing-detection-benchmark contributors" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "xgboost>=1.7",
    "torch>=2.1",
    "transformers>=4.36",
    "datasets>=2.14",
    "evaluate>=0.4",
    "tqdm>=4.66",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "typer[all]>=0.9",
    "mlflow>=2.8",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0"
]
dynamic = ["classifiers"]

[project.optional-dependencies]
dev = [
    "black>=23.12",
    "ruff>=0.1.8",
    "mypy>=1.6",
    "pytest>=7.4",
    "pytest-cov>=4.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = "src"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101", "S311"]
exclude = ["docs", "notebooks"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.coverage.run]
source = ["phishing_benchmark"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
